--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,21 @@
     <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
 <body>
+	<iframe src="" frameborder="0">
+		<html>
+
+			<head>
+				<meta charset="UTF-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<meta http-equiv="X-UA-Compatible" content="ie=edge">
+				<title>Document</title>
+			</head>
+			<body>
+				xxx
+			</body>
+
+		</html>
+	</iframe>
     <div style="position: relative; width:480px; height:360px;">
         <button id="skipAd">Skip ad</button>
         <div id="myContent" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
