--- a/demo/index.html
+++ b/demo/index.html
@@ -94,7 +94,7 @@
                 'AdLinearChange',
                 'AdDurationChange',
                 'AdExpandedChange',
-                //'AdRemainingTimeChange', // [Deprecated in 2.0] but will be still fired for backwards compatibility
+                'AdRemainingTimeChange', // [Deprecated in 2.0] but will be still fired for backwards compatibility
                 'AdVolumeChange',
                 'AdImpression',
                 'AdVideoStart',
