move vpaid creative to https server

--- a/demo/index.html
+++ b/demo/index.html
@@ -43,7 +43,8 @@
         var vpaid = new VPAIDHTML5Client(el, video, {});
         var urls = [
                 {
-                    url: 'http://cdn-assets.brainient.com/2015/mailonline_example/vpaid.js',
+                    //url: 'http://cdn-assets.brainient.com/2015/mailonline_example/vpaid.js',
+					url: 'https://mconnor.github.io/some-vpaid/vpaid.js',
                     adParameters: ''
                 },
                 {
