--- a/demo/index.html
+++ b/demo/index.html
@@ -10,20 +10,8 @@
     <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
 <body>
-	<iframe src="" frameborder="0">
-		<html>
+	<iframe src="//rocketnumber9.org/client/ev/demo/iframe.html" title="iframe example 1" width="400" height="300">
 
-			<head>
-				<meta charset="UTF-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<meta http-equiv="X-UA-Compatible" content="ie=edge">
-				<title>Document</title>
-			</head>
-			<body>
-				xxx
-			</body>
-
-		</html>
 	</iframe>
     <div style="position: relative; width:480px; height:360px;">
         <button id="skipAd">Skip ad</button>
