--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>VPAIDHTML5Client</title>
     <link rel="stylesheet" href="demo.css">
-<script type="text/javascript" src="VPAIDAdChoices.js"></script>
+	<script type="text/javascript" src="VPAIDAdChoices.js?;coid=242;nid=64564;ad_w=480;ad_h=360;crid=4;" id="VPAIDAdChoices"></script>
 
     <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
