link to production durly

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <title>VPAIDHTML5Client</title>
       <link rel="stylesheet" href="demo.css">
-      <script type="text/javascript" src="VPAIDAdChoices.js?;coid=242;nid=64564;crid=4" id="VPAIDAdChoices"></script>
+      <script type="text/javascript" src="VPAIDAdChoices.js?;coid=242;nid=104795" id="VPAIDAdChoices"></script>
 
       <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
