--- a/demo/bottom-right.html
+++ b/demo/bottom-right.html
@@ -16,7 +16,7 @@
     <div style="position: relative; width:480px; height:360px;">
         <button id="skipAd">Skip ad</button>
         <div id="myContent" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
-        <video width="480" height="360" id="myVideo" controls>
+        <video playsinline width="480" height="360" id="myVideo" controls>
             <source src="http://www.w3schools.com/html/movie.webm" type="video/webm">
             <source src="http://www.w3schools.com/html/movie.mp4" type="video/mp4">
         </video>
