--- a/demo/bottom-left.html
+++ b/demo/bottom-left.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <title>VPAIDHTML5Client</title>
     <link rel="stylesheet" href="demo.css">
-    <script type="text/javascript" src="VPAIDAdChoices.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-left" id="VPAIDAdChoices">
-    </script>
+   
     <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
 
 <body>
+   
     <iframe src="./iframe.html" title="iframe example 1" width="400" height="300">
     </iframe>
     <div style="position: relative; width:480px; height:360px;">
@@ -22,6 +22,7 @@
         </video>
     </div>
     <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="VPAIDAdChoices.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-left" id="VPAIDAdChoices"></script>
 </body>
 
 </html>
