--- a/demo/top-right.html
+++ b/demo/top-right.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <title>VPAIDHTML5Client</title>
     <link rel="stylesheet" href="demo.css">
-    <script type="text/javascript" src="VPAIDAdChoices.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=top-right" id="VPAIDAdChoices">
-    </script>
     <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
 
@@ -22,6 +20,7 @@
         </video>
     </div>
     <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="VPAIDAdChoices.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=top-right" id="VPAIDAdChoices"></script>
 </body>
 
 </html>
