--- a/demo/bottom-left.html
+++ b/demo/bottom-left.html
@@ -13,7 +13,7 @@
    
     <iframe src="./iframe.html" title="iframe example 1" width="400" height="300">
     </iframe>
-    <div style="position: relative; width:480px; height:360px;">
+    <div id="thevideo" style="position: relative; width:480px; height:360px;">
         <button id="skipAd">Skip ad</button>
         <div id="myContent" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
         <video width="480" height="360" id="myVideo" controls>
@@ -21,8 +21,7 @@
             <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
         </video>
     </div>
-    <script type="text/javascript" src="./main.js"></script>
-    <script type="text/javascript" src="VPAIDAdChoices.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-left" id="VPAIDAdChoices"></script>
+    <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-left" id='main'></script>
 </body>
 
 </html>
