--- a/demo/bottom-right.html
+++ b/demo/bottom-right.html
@@ -19,8 +19,7 @@
             <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
         </video>
     </div>
-    <script type="text/javascript" src="./main.js"></script>
-    <script type="text/javascript" src="VPAIDAdChoices.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-right" id="VPAIDAdChoices"></script>
+    <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-right" id='main'></script>
 </body>
 
 </html>
