--- a/demo/bottom-left.html
+++ b/demo/bottom-left.html
@@ -21,7 +21,7 @@
             <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
         </video>
     </div>
-    <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;delay_start=2;position=bottom-left" id='main'></script>
+    <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;position=bottom-left" id='main'></script>
 </body>
 
 </html>
