--- a/demo/top-left.html
+++ b/demo/top-left.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="demo.css">
     <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
-
 <body>
-    <iframe src="./iframe.html" title="iframe example 1" width="400" height="300">
-    </iframe>
-    <div style="position: relative; width:480px; height:360px;">
+    <div style="position: absolute; top:100px; left: 60px; width:480px; height:360px;">
         <button id="skipAd">Skip ad</button>
-        <div id="myContent" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
+        <div id="ad" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
         <video width="480" height="360" id="myVideo" controls>
             <source src="//www.w3schools.com/html/movie.webm" type="video/webm">
             <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
