--- a/demo/top-right.html
+++ b/demo/top-right.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
+
     <div style="position: absolute; top:100px; left: 60px; width:480px; height:360px;">
-        <button id="skipAd">Skip ad</button>
+        
         <div id="ad" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
-        <video width="480" height="360" id="myVideo" controls>
+        <video playsinline width="480" height="360" id="myVideo" controls>
             <source src="//www.w3schools.com/html/movie.webm" type="video/webm">
             <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
         </video>
     </div>
     <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;position=top-right" id='main'></script>
-    
 </body>
 
 </html>
