--- a/demo/top-right.html
+++ b/demo/top-right.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-
+        <h1>VPAID 2</h1>
     <div style="position: absolute; top:100px; left: 60px; width:480px; height:360px;">
-        
+        <button id="skipAd">Skip ad</button>
         <div id="ad" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
         <video playsinline width="480" height="360" id="myVideo" controls>
             <source src="//www.w3schools.com/html/movie.webm" type="video/webm">
