--- a/demo/bottom-right.html
+++ b/demo/bottom-right.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+        <h1>VPAID 2</h1>
     <div style="position: absolute; top:100px; left: 60px; width:480px; height:360px;">
         <button id="skipAd">Skip ad</button>
         <div id="ad" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
