--- a/demo/bottom-left.html
+++ b/demo/bottom-left.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>VPAIDHTML5Client</title>
     <link rel="stylesheet" href="demo.css">
-    <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
 
 <body>
@@ -14,11 +13,12 @@
         <button id="skipAd">Skip ad</button>
         <div id="ad" style="position: absolute; top: 0; left: 0; z-index: 1; width: 480px; height: 360px;"></div>
         <video playsinline width="480" height="360" id="myVideo" controls>
-            <source src="//www.w3schools.com/html/movie.webm" type="video/webm">
-            <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
+            <source src="./movs/movie.webm" type="video/webm">
+            <source src="./movs/movie.mp4" type="video/mp4">
         </video>
     </div>
-    <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;position=bottom-left" id='main'></script>
+    <script type="text/javascript" src="VPAIDHTML5Client.js?;coid=242;nid=64564;position=bottom-left" id='adchoices-vpaid'></script>
+    <script type="text/javascript" src="./main.js" id='main'></script>
 </body>
 
 </html>
