--- a/demo/top-right.html
+++ b/demo/top-right.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>VPAIDHTML5Client</title>
+    <title>VPAIDHTML5Client icon top right</title>
     <link rel="stylesheet" href="demo.css">
-    <script type="text/javascript" src="VPAIDHTML5Client.js"></script>
 </head>
 
 <body>
@@ -18,7 +17,8 @@
             <source src="//www.w3schools.com/html/movie.mp4" type="video/mp4">
         </video>
     </div>
-    <script type="text/javascript" src="./main.js?;vpaid=true;coid=242;nid=64564;position=top-right" id='main'></script>
+    <script type="text/javascript" src="VPAIDHTML5Client.js?;coid=242;nid=64564;position=top-right" id='adchoices-vpaid'></script>
+    <script type="text/javascript" src="./main.js" id='main'></script>
 </body>
 
 </html>
