--- a/demo/bottom-left.html
+++ b/demo/bottom-left.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>VPAIDHTML5Client</title>
+    <title>VPAIDHTML5Client icon bottom bottom-left</title>
     <link rel="stylesheet" href="demo.css">
 </head>
 
