--- a/demo/top-left.html
+++ b/demo/top-left.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>VPAIDHTML5Client</title>
+    <title>VPAIDHTML5Client icon top left</title>
     <link rel="stylesheet" href="demo.css">
 </head>
 
